[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-verifly"
version = "0.1.0"
description = "An integration package connecting Verifly (agent-native email verification) and LangChain"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Verifly", email = "support@verifly.email" }]
keywords = [
    "langchain",
    "verifly",
    "email-verification",
    "email-validation",
    "deliverability",
    "agents",
    "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3,<0.4",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://verifly.email"
Repository = "https://github.com/james-sib/langchain-verifly"
"Source Code" = "https://github.com/james-sib/langchain-verifly/tree/master/langchain_verifly"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["langchain_verifly"]

[tool.setuptools.package-data]
langchain_verifly = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
